--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name='description' content='六角西餐廳' />
+    <meta property="og:title" content="六角西餐廳" />
+    <meta property="og:description" content="開幕慶祝餐點全面8折起">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="image/logo_w.png" />
+    <link rel="shortcut icon" href="http://www.hexschool.com/favicon.ico" />
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/web.js"></script>
+    <link rel="stylesheet" href="css/all.min.css">
     <title>六角西餐廳</title>
 </head>
 
@@ -17,8 +21,14 @@
     <div class="header">
         <div class="container clearfix">
             <div id="logo">
-                <a href="#">
-                    <img src="/image/logo_w(null).svg" alt=""></a>
+
+                <a href="index.html">
+                    <h1>六角西餐廳</h1>
+                </a>
+
+
+
+
 
             </div>
             <div id="nav">
@@ -29,9 +39,9 @@
                 </a>
                 <!-- <a class="" href="">show</a> -->
                 <ul class="menu clearfix">
-                    <li><a href="#">特色</a></li>
-                    <li><a href="#">主廚</a></li>
-                    <li><a href="#">地圖</a></li>
+                    <li><a href="index.html">特色</a></li>
+                    <li><a href="index.html">主廚</a></li>
+                    <li><a href="index.html">地圖</a></li>
                     <li>
                         <a href="order.html">線上訂餐</a></li>
                     <li><a href="login.html">會員登入</a></li>
@@ -142,16 +152,16 @@
     </div>
     <div class="map-position">
         <div class="container clearfix">
-            <h3 class="map-title ">我們的位置不太夠坐<br>要不要先定位呢？</h3>
+            <h3 class="map-title">我們的位置不太夠坐<br>要不要先定位呢？</h3>
             <div class="map ">
             </div>
             <form action=" " class="form-table clearfix ">
                 <label for=" ">姓名</label>
                 <input type="text">
                 <label for=" ">電話</label>
-                <input type="text">
+                <input type="tel">
                 <label for=" ">信箱</label>
-                <input type="text">
+                <input type="email">
                 <label for=" ">人數</label>
                 <input type="text">
                 <label for=" " class="food-title ">是否需要素食</label>
@@ -190,18 +200,19 @@
 
             <div class="social-media clearfix">
                 <ul class="clearfix">
-                    <li><a href="#"><i class="fab fa-google-plus-square "></a></i>
+                    <li><a href="#"><i class="fab fa-google-plus-square"></a></i>
                     </li>
-                    <li><a href="#"><i class="fab fa-twitter-square "></a></i>
+                    <li><a href="#"><i class="fab fa-twitter-square"></a></i>
                     </li>
-                    <li><a href="#"><i class="fab fa-facebook-square "></a></i>
+                    <li><a href="#"><i class="fab fa-facebook-square"></a></i>
                     </li>
                 </ul>
             </div>
         </div>
 
     </div>
-
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/web.js"></script>
 </body>
 
 </html>
