--- a/register.html
+++ b/register.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/web.js"></script>
     <title>六角西餐廳</title>
 </head>
 
@@ -15,27 +17,30 @@
     <div class="header">
         <div class="container clearfix">
             <div id="logo">
-                <a href="#">
-                    <img src="/image/logo_w(null).svg" alt=""></a>
+
+                <a href="index.html">
+                    <h1>六角西餐廳</h1>
+                </a>
+
+
+
+
 
             </div>
-            <!-- <ul class="show-menu1">aaa
-                <li><a href="#">選單一</a></li>
-                <li><a href="#">選單二</a></li>
-                <li><a href="#">選單三</a></li>
-                <li><a href="#">選單四</a></li>
-                <li><a href="#">選單五</a></li>
-                <li><a href="#" target="_blank">選單六</a></li>
-                <li><a href="#">選單七</a></li>
-            </ul> -->
             <div id="nav">
-
-
-                <!-- <img src="http://dummyimage.com/21x24/eee/ddd/" alt=""> -->
+                <a class="showmenu">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <!-- <a class="" href="">show</a> -->
                 <ul class="menu clearfix">
-                    <li><a href="#">特色</a></li>
-                    <li><a href="#">主廚</a></li>
-                    <li><a href="#">地圖</a></li>
+                    <li><a href="index.html">特色</a></li>
+                    <li><a href="index.html">主廚</a></li>
+                    <li><a href="index.html">地圖</a></li>
+                    <li>
+                        <a href="order.html">線上訂餐</a></li>
+                    <li><a href="login.html">會員登入</a></li>
                 </ul>
             </div>
 
@@ -84,7 +89,7 @@
                             </label>
 
 
-                        <a href="#">已經有帳號了？</a>
+                        <a href="login.html">已經有帳號了？</a>
                         <input type="button" id="register-btn" value="註冊">
 
                         <!-- <div class="btn-area clearfix"> -->
