--- a/register.html
+++ b/register.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name='description' content='六角西餐廳' />
+    <meta property="og:title" content="六角西餐廳" />
+    <meta property="og:description" content="開幕慶祝餐點全面8折起">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="image/logo_w.png" />
+    <link rel="shortcut icon" href="http://www.hexschool.com/favicon.ico" />
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/web.js"></script>
+    <link rel="stylesheet" href="css/all.min.css">
     <title>六角西餐廳</title>
 </head>
 
@@ -145,7 +149,8 @@
         </div>
 
     </div>
-
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/web.js"></script>
 </body>
 
 </html>
