修正部分css名稱

--- a/index.html
+++ b/index.html
@@ -76,14 +76,6 @@
                 <hr>
             </div>
 
-            <!-- <h2 class="feature-title "></h2> -->
-            <!-- <div class="features clearfix ">-->
-            <!-- <div class="horizontal-line ">
-            </div> -->
-            <!-- <div class="t ">
-                <hr>
-            </div> -->
-
             <div class="intro ">
                 <img src="image/feature_1.png" alt=" " class="features-img">
                 <h3 class="intro-title">台灣本土蔬菜</h3>
@@ -194,7 +186,7 @@
                 </ul>
 
             </div>
-            <div class="name1 clearfix">
+            <div class="sublogo clearfix">
                 <img src="image/logo_l(null).svg " alt=" ">
             </div>
 
