修正部分html結構名稱

--- a/register.html
+++ b/register.html
@@ -128,8 +128,8 @@
                 </ul>
 
             </div>
-            <div class="name1 clearfix">
-                <img src="image/logo_l(null).svg" alt="">
+            <div class="sublogo clearfix">
+                <img src="image/logo_l(null).svg " alt=" ">
             </div>
 
             <div class="social-media clearfix">
