--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
             </div>
             <div class="sublogo clearfix">
-                <img src="image/logo_l(null).svg " alt=" ">
+                <img src="image/logo_l.svg" alt=" ">
             </div>
 
             <div class="social-media clearfix">
