--- a/order.html
+++ b/order.html
@@ -100,60 +100,63 @@
 
 
                 <!-- <div class="list-area"> -->
-                <div class="meal">
-                    <i class=" far fa-heart fa-2x"></i>
+                <div>
+                    <div class="meal">
+                        <i class=" far fa-heart fa-2x"></i>
 
-                    <img class="meal-img" src="image/product_1.png" alt="">
-                    <div class="ribbon"><span>熱銷美食</span></div>
-                    <!-- <div class="top"></div> -->
-                    <div class="meal-list">
-                        <h1 class="meal-title-cn">經典漢堡套餐</h1>
-                        <h2 class="meal-title-en">Classic Hamburger Package</h2>
-                        <hr class="center-line">
-                        <div class="price">$120</div>
-                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                        <img class="meal-img" src="image/product_1.png" alt="">
+                        <div class="ribbon"><span>熱銷美食</span></div>
+                        <!-- <div class="top"></div> -->
+                        <div class="meal-list">
+                            <h1 class="meal-title-cn">經典漢堡套餐</h1>
+                            <h2 class="meal-title-en">Classic Hamburger Package</h2>
+                            <hr class="center-line">
+                            <div class="price">$120</div>
+                            <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                        </div>
+
                     </div>
+                    <div class="meal">
+                        <i class=" far fa-heart fa-2x"></i>
 
-                </div>
-                <div class="meal">
-                    <i class=" far fa-heart fa-2x"></i>
+                        <img class="meal-img" src="image/product_2.png" alt="">
+                        <div class="meal-list">
+                            <h1 class="meal-title-cn">英俊香腸</h1>
+                            <h2 class="meal-title-en">Handsome Sausage</h2>
+                            <hr class="center-line">
+                            <div class="price">$1024</div>
+                            <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                        </div>
 
-                    <img class="meal-img" src="image/product_2.png" alt="">
-                    <div class="meal-list">
-                        <h1 class="meal-title-cn">英俊香腸</h1>
-                        <h2 class="meal-title-en">Handsome Sausage</h2>
-                        <hr class="center-line">
-                        <div class="price">$1024</div>
-                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                     </div>
+                    <div class="meal">
+                        <i class=" far fa-heart fa-2x"></i>
 
-                </div>
-                <div class="meal">
-                    <i class=" far fa-heart fa-2x"></i>
+                        <img class="meal-img" src="image/product_3.png" alt="">
+                        <div class="meal-list">
+                            <h1 class="meal-title-cn">漢堡兄弟</h1>
+                            <h2 class="meal-title-en">Hamburg Brothers</h2>
+                            <hr class="center-line">
+                            <div class="price">$792</div>
+                            <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                        </div>
 
-                    <img class="meal-img" src="image/product_3.png" alt="">
-                    <div class="meal-list">
-                        <h1 class="meal-title-cn">漢堡兄弟</h1>
-                        <h2 class="meal-title-en">Hamburg Brothers</h2>
-                        <hr class="center-line">
-                        <div class="price">$792</div>
-                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                     </div>
+                    <div class="meal">
+                        <i class="fas fa-heart fa-2x"></i>
 
-                </div>
-                <div class="meal">
-                    <i class="fas fa-heart fa-2x"></i>
+                        <img class="meal-img" src="image/product_4.png" alt="">
+                        <div class="meal-list">
+                            <h1 class="meal-title-cn">完美願望</h1>
+                            <h2 class="meal-title-en">Dragon Ball Package</h2>
+                            <hr class="center-line">
+                            <div class="price">$999,999</div>
+                            <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
+                        </div>
 
-                    <img class="meal-img" src="image/product_4.png" alt="">
-                    <div class="meal-list">
-                        <h1 class="meal-title-cn">完美願望</h1>
-                        <h2 class="meal-title-en">Dragon Ball Package</h2>
-                        <hr class="center-line">
-                        <div class="price">$999,999</div>
-                        <a href="" class="buy"><i class="fas fa-shopping-cart " aria-hidden="true"></i>加入購物車</a>
                     </div>
-
                 </div>
+
             </div>
             <!-- </div> -->
 
@@ -182,7 +185,7 @@
 
             </div>
             <div class="sublogo clearfix">
-                <img src="image/logo_l(null).svg " alt=" ">
+                <img src="image/logo_l.svg" alt=" ">
             </div>
 
             <div class="social-media clearfix">
