微調部分html及css

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="http://www.hexschool.com/favicon.ico" />
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <title>六角西餐廳</title>
 </head>
 
@@ -74,13 +74,13 @@
             <form class="loginform" action="">
                 <div class="container">
                     <h3 class="login">LOGIN</h3>
-                    <label for="">Email Address*</label>
+                    <label for="mail">Email Address*</label>
                     <label class="user-login">
-                        <input type="text">
+                        <input type="text" id="mail">
                     </label>
-                    <label for="">Password*</label>
+                    <label for="passwd">Password*</label>
                     <label class="passwd-login">
-                      <input type="text">  
+                      <input type="text" id="passwd">  
                     </label>
                     <a href="#">忘記密碼？</a>
 
