--- a/order.html
+++ b/order.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="http://www.hexschool.com/favicon.ico" />
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <title>六角西餐廳</title>
 </head>
 
