--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="http://www.hexschool.com/favicon.ico" />
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <title>六角西餐廳</title>
 </head>
 
@@ -80,16 +80,16 @@
 
                 <form class="registerform" action="">
                     <div class="container">
-                        <label for="">Email Address*</label>
+                        <label for="regist-user">Email Address*</label>
                         <label class="user">
-                                <input type="text">
+                                <input type="text" id="regist-user">
                             </label>
-                        <label for="">Password*</label>
+                        <label for="regist-passwd">Password*</label>
                         <label class="passwd">
-                              <input type="text">  
+                              <input type="text" id="regist-passwd">  
                             </label>
                         <label class="repeate-passwd">
-                            <input type="text">
+                            <input type="text" >
                             </label>
 
 
