--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="http://www.hexschool.com/favicon.ico" />
     <link rel="stylesheet" href="css/normailze.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <title>六角西餐廳</title>
 </head>
 
@@ -39,9 +39,9 @@
                 </a>
                 <!-- <a class="" href="">show</a> -->
                 <ul class="menu clearfix">
-                    <li><a href="index.html">特色</a></li>
-                    <li><a href="index.html">主廚</a></li>
-                    <li><a href="index.html">地圖</a></li>
+                    <li><a href="#content">特色</a></li>
+                    <li><a href="#chief">主廚</a></li>
+                    <li><a href="#map">地圖</a></li>
                     <li>
                         <a href="order.html">線上訂餐</a></li>
                     <li><a href="login.html">會員登入</a></li>
@@ -66,7 +66,7 @@
 
         </div>
     </div>
-    <div class="content clearfix">
+    <div class="content clearfix" id="content">
 
         <div class="container">
             <div class="outer">
@@ -99,7 +99,7 @@
 
 
     </div>
-    <div class="chief-feature clearfix">
+    <div class="chief-feature clearfix" id="chief">
         <div class="chief-feature-img"></div>
         <div class="name">
             <div class="container">
@@ -142,30 +142,30 @@
 
         </div>
     </div>
-    <div class="map-position">
+    <div class="map-position" id="map">
         <div class="container clearfix">
             <h3 class="map-title">我們的位置不太夠坐<br>要不要先定位呢？</h3>
             <div class="map ">
             </div>
             <form action=" " class="form-table clearfix ">
-                <label for=" ">姓名</label>
-                <input type="text">
-                <label for=" ">電話</label>
-                <input type="tel">
-                <label for=" ">信箱</label>
-                <input type="email">
-                <label for=" ">人數</label>
-                <input type="text">
-                <label for=" " class="food-title ">是否需要素食</label>
+                <label for="name">姓名</label>
+                <input type="text" id="name">
+                <label for="tellphone">電話</label>
+                <input type="tel" id="tellphone">
+                <label for="email">信箱</label>
+                <input type="email" id="email">
+                <label for="people">人數</label>
+                <input type="text" id="people">
+                <label class="food-title">是否需要素食</label>
                 <div class="food-check-radio clearfix ">
-                    <label class="food" for="food-check-yes ">是</label>
-                    <input type="radio" id="food-check-yes " name="check ">
-                    <label class="food" for="food-check-no ">否</label>
-                    <input type="radio" id="food-check-no " name="check ">
+                    <label class="food" for="food-check-yes">是</label>
+                    <input type="radio" id="food-check-yes" name="check">
+                    <label class="food" for="food-check-no">否</label>
+                    <input type="radio" id="food-check-no" name="check">
                 </div>
                 <div class="btn-area">
-                    <input type="reset" class="reset-btn " value="取消 ">
-                    <input type="submit" class="send-btn " value="送出 ">
+                    <input type="reset" class="reset-btn" value="取消">
+                    <input type="submit" class="send-btn" value="送出">
                 </div>
             </form>
         </div>
